--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type='text/css' href='{% static "css/xd.css" %}' rel ='stylesheet'/>
+    <link type="text/css" href="{% static 'css/base.css' %}" media="screen" rel ="stylesheet"/>
     <title>Earthlove</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1755/1755423.png">
 </head>
 
-<body>
+<body id="bp" style="background-image: url('{%static 'img/fondo.jpg' %}')">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
@@ -18,7 +18,6 @@
             <!-- <link rel="stylesheet" href="img/title.png"> -->
             <!-- <div style="background-image:url( 'img/title.png')"></div> -->
             <a class="navbar-brand" href="/">Earthlove
-                {% load static %}
             <img src="{% static 'img/arbolito.png' %}" alt="arbolito" height="20px" width="20px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
@@ -45,14 +44,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/inicio">Inicio</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                               recorridos
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" class="nav-link" href="/paisajes">paisajes lindos</a></li>
-                                <li><a class="dropdown-item" class="nav-link" href="/afectados">lugares afectados</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/paisajes/">Recorre</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Cerrar Sesión</a>
