--- a/homeapp/templates/inicio.html
+++ b/homeapp/templates/inicio.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="descripcion"><b>Descripción de la noticia</b></label>
-                    <input type="text" name="descripcion" id="descripcion" class="form-control" placeholder="Escribe una breve descripción de la noticia (máx. 200 carácteres)" required=True>
+                    <input type="text" name="descripcion" id="descripcion" class="form-control" placeholder="Escribe una descripción de la noticia (máx. 500 carácteres)" required=True>
                 </div>
                 <div class="mb-3">
                     <label for="url"><b>URL</b></label>
