--- a/homeapp/templates/mipost.html
+++ b/homeapp/templates/mipost.html
@@ -6,7 +6,7 @@
 <br>
 <main class="container py-5">
     <section class="card card-body">
-    <h1>Miiiiiissss poooossss solamenteeee</h1>
+    <h1>Mis publicaciones</h1>
     </section>
 </main>
 <br>
