--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -36,13 +36,11 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="/comunidad/">Comunidad de noticias</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/nosotros">Nosotros</a>
-                        </li>
+                        
 
                         {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/inicio">Inicio</a>
+                            <a class="nav-link" href="/inicio">Tu perfil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="/paisajes/">Recorre</a>
@@ -58,6 +56,9 @@
                             <a class="nav-link" href="/signin">Iniciar Sesión</a>
                         </li>
                         {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/nosotros">Nosotros</a>
+                        </li>
                 </div>
             </div>
         </div>
