--- a/homeapp/templates/comunidad.html
+++ b/homeapp/templates/comunidad.html
@@ -19,29 +19,39 @@
 <br>
 <main class="container py-5">
     <section class="card card-body">
+        <h1>Noticias publicadas por la comunidad</h1>
+    </section>
+</main> 
+
+<main class="container py-5">
+    <section class="card card-body">
         <ul>
             {% for noticia in noti %}
-            <li>
-                <h1>{{noticia.titulo}}</h1>
-                <p>{{noticia.descripcion}}</p>
-                <a href="{{noticia.url}}">Link de noticia</a>
-                <br>
-                <a href="{{noticia.url_img}}">Link de foto</a>
-                <br> 
-                <br>
-                <p>{{noticia.usuario}}</p>
-                <form action="{% url 'agregar_like' noticia.id user %}" method="post">
-                    {% csrf_token %}
-                    {% if user in noticia.laikeros %}
-                        <button>Dislike</button>
-                    {% else %}
-                        <button>like</button>
-                    {% endif %}
+            
+                <main class="container py-5">
+                    <section class="card card-body">
+                        <h1 class="text-center">{{noticia.titulo}}</h1>
+                        <h6 class="text-center">Descripcion:</h6>
+                        <p class="text-center">{{noticia.descripcion}}</p>
+                        <a class="text-center" href="{{noticia.url}}">Link de noticia</a>
+                        
+                        <a class="text-center" href="{{noticia.url_img}}">Link de foto</a>
+                        <br>
+                        <p class="text-center">Por->{{noticia.usuario}}</p>
+                        <form class="text-center" action="{% url 'agregar_like' noticia.id user %}" method="post">
+                            {% csrf_token %}
+                            {% if user in noticia.laikeros %}
+                                <button>Dislike</button>
+                            {% else %}
+                                <button>like</button>
+                            {% endif %}
 
-                    
-                    <small>{{noticia.likes}}</small>
-                </form>
-            </li>
+                            
+                            <small>{{noticia.likes}}</small>
+                        </form>
+                    </section>
+                </main>    
+
             {% endfor %}
         </ul>
     </section>
