--- a/homeapp/templates/home.html
+++ b/homeapp/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{%load static%}
+{% load static %}
 
 
 {% block content %}
@@ -21,10 +21,8 @@
         <img src="{% static 'img/title.jpg' %}" alt="Foto titulo" style="width: 200px;">
         <br>
         <div style="background-image:url( 'img/title.jpg')"></div>
-        <p>
-            EarthLove es una página web en la que se hace un seguimiento de la actividad día a día del usuario, para que así tenga consciencia de cómo y cuánto está contribuyendo a la causa. Así mismo, puede encontrar información al respecto del cambio climático y cómo afecta a cada sector de una población. La característica distintiva de nuestro proyecto es que el usuario es quien cambia la página, él puede ir registrando lo que ha hecho en la semana y ver por ejemplo cuántos litros de agua ha ahorrado, en cuánto ha reducido la huella de carbono, etc; con estadísticas y gráficos. De igual forma, entusiasmar al usuario con consejos, los cuales le demuestre que pequeñas acciones pueden beneficiar enormemente, tanto a él como al planeta Tierra. El acceso a una fuente de datos externa a través de una API lo incorporará con toda la información necesaria al respecto, el cambio climático, consecuencias de tener hábitos que se ocupen de cuidar el medio ambiente, gráficas al respecto, etc.
-
-        </p>
+            <p>
+            EarthLove es una página web en la que se hace un seguimiento de la actividad día a día del usuario, para que así tenga consciencia de cómo y cuánto está contribuyendo a la causa. Así mismo, puede encontrar información al respecto del cambio climático y cómo afecta a cada sector de una población. La característica distintiva de nuestro proyecto es que el usuario es quien cambia la página, él puede ir registrando lo que ha hecho en la semana y ver por ejemplo cuántos litros de agua ha ahorrado, en cuánto ha reducido la huella de carbono, etc; con estadísticas y gráficos. De igual forma, entusiasmar al usuario con consejos, los cuales le demuestre que pequeñas acciones pueden beneficiar enormemente, tanto a él como al planeta Tierra. El acceso a una fuente de datos externa a través de una API lo incorporará con toda la información necesaria al respecto, el cambio climático, consecuencias de tener hábitos que se ocupen de cuidar el medio ambiente, gráficas al respecto, etc.</p>
 
 
         <!-- <div class="text-center">
