--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1755/1755423.png">
 </head>
 
-<body id="bp" style="background-image: url('{%static 'img/fondo.jpg' %}')">
+<body id="bp" style="background-image: url('{%static 'img/fondo1.jpg' %}')">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
@@ -39,7 +39,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/nosotros">Nosotros</a>
                         </li>
-
                         {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link" href="/inicio">Inicio</a>
@@ -47,10 +46,60 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="/paisajes/">Recorre</a>
                         </li>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Cerrar Sesión</a>
                         </li>
                         {% else %}
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <li class="nav-item">
                             <a class="nav-link" href="/signup">Registrate</a>
                         </li>
@@ -58,6 +107,9 @@
                             <a class="nav-link" href="/signin">Iniciar Sesión</a>
                         </li>
                         {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/nosotros">Nosotros</a>
+                        </li>
                 </div>
             </div>
         </div>
