--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -36,12 +36,10 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="/comunidad/">Comunidad de noticias</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/nosotros">Nosotros</a>
-                        </li>
+                        
                         {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/inicio">Inicio</a>
+                            <a class="nav-link" href="/inicio">Tu Perfil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="/paisajes/">Recorre</a>
@@ -62,14 +60,7 @@
                         <br>
                         <br>
                         <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Cerrar Sesión</a>
                         </li>
@@ -92,16 +83,7 @@
                         <br>
                         <br>
                         <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="/signup">Registrate</a>
                         </li>
@@ -110,7 +92,7 @@
                         </li>
                         {% endif %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/nosotros">Nosotros</a> a
+                            <a class="nav-link" href="/nosotros">Nosotros</a>
                         </li>
                 </div>
             </div>
