--- a/homeapp/templates/nosotros.html
+++ b/homeapp/templates/nosotros.html
@@ -1,10 +1,28 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
 <br>
 <br>
 <main class="container py-5">
     <h1>Informacion sobre todos nosotros</h1>
+
+    <section class="card card-body">
+        Amaro Vergara
+        <img src="{%static 'img/default_user_image.png'%}" width=200>
+    </section>
+    <section class="card card-body">
+        Nicklaus Mejía
+        <img src="{%static 'img/default_user_image.png'%}" width=200>
+    </section>
+    <section class="card card-body">
+        Fabián González
+        <img src="{%static 'img/default_user_image.png'%}" width=200>
+    </section>
+    <section class="card card-body">
+        Matías Acuña
+        <img src="{%static 'img/default_user_image.png'%}" width=200>
+    </section>
 </main>
+
 {% endblock %}
